--- a/views/spaces.ejs
+++ b/views/spaces.ejs
@@ -4,7 +4,8 @@
 <% for(var i = 0; i < spaces.length; i++) { %>
   <li> <%= spaces[i].space_name %>,
   <%= spaces[i].space_description %>,
-<%= spaces[i].space_address %> </li>
+<%= spaces[i].space_address %>,
+£<%= spaces[i].space_price %> </li>
 <% }%>
 </ul>
 
